toolbar jadi berwarna setelah collapsed.

--- a/app/src/main/res/layout/activity_travel_detail.xml
+++ b/app/src/main/res/layout/activity_travel_detail.xml
@@ -20,7 +20,7 @@ android:focusableInTouchMode="true">
             android:layout_width="match_parent"
             android:layout_height="280dp"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/colorPrimaryDark"
             app:expandedTitleMarginBottom="32dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
