--- a/app/src/main/res/layout/activity_detail_film.xml
+++ b/app/src/main/res/layout/activity_detail_film.xml
@@ -47,6 +47,13 @@
                 android:text="release date"
                 android:layout_marginTop="10dp"/>
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Synopsis"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"/>
+            <TextView
                 android:id="@+id/txt_deskripsi_film"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
