--- a/app/src/main/res/layout/header_nav_view.xml
+++ b/app/src/main/res/layout/header_nav_view.xml
@@ -15,15 +15,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="20dp">
-        <TextView
-            android:id="@+id/tx_profile"
+        <RelativeLayout
+            android:id="@+id/layout_tx_profile"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Anang Kurniawan"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"/>
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tx_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anang Kurniawan"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
         <LinearLayout
+            android:id="@+id/btn_wallet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
